--- a/TailorLion.ipynb
+++ b/TailorLion.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPRxfE23ZMKUbQLHjuFcsS2",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Thecodingtailor/MKT440/blob/main/TailorLion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -1758,7 +1770,7 @@
         "id": "kg3_acZuaYuj",
         "outputId": "204ce97b-e549-49fb-b3b2-d605c9d4e7b5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "data": {
@@ -1796,7 +1808,7 @@
         },
         "outputId": "52bf3488-450c-4a2b-c65c-65dd192e54b9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
